--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_core: ^2.32.0
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.8.3
+  geolocator: ^13.0.2
+  google_maps_flutter: ^2.10.0
+  shared_preferences: ^2.3.5
+  uuid: ^4.5.1
+  sensors_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/background.jpg
+    - assets/map_style.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
