--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.1
   sensors_plus: ^6.1.1
   provider: ^6.1.2
+  fake_cloud_firestore: ^2.5.2
 
 dev_dependencies:
   flutter_test:
