change firebase acc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
   assets:
     - assets/images/background.jpg
     - assets/images/default_avatar.jpg
+    - assets/images/bg1.jpg
+    - assets/images/bg2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
